--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 10px;
+	border-radius: 10px;
 }
 
 /* Add some padding inside the card container */
