--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 	align-items: center;
 	padding: 10px;
 	border-radius: 10px;
+	position: relative;
 }
 
 /* Add some padding inside the card container */
@@ -45,6 +46,7 @@ nav {
 	background-color: #ee4e2c;
 	height: 60px;
 	width: 100%;
+	z-index: 2;
 }
 
 .container-nav {
@@ -90,7 +92,6 @@ nav {
 	align-items: center;
 }
 
-@import "compass/css3";
 
 /* I wanted to go with a mobile first approach, but it actually lead to more verbose CSS in this case, so I've gone web first. Can't always force things... Side note: I know that this style of nesting in SASS doesn't result in the most performance efficient CSS code... but on the OCD/organizational side, I like it. So for CodePen purposes, CSS selector performance be damned. */
 /* Global settings */
@@ -141,7 +142,7 @@ nav {
 	display: table;
 }
 
-.column-labels .product-image:first-child{
+.column-labels .product-image:first-child {
 	text-align: center;
 }
 
@@ -282,6 +283,25 @@ label {
 	background-color: #494;
 }
 
+.heart {
+	color: #000;
+	position: absolute;
+	margin-left: auto;
+	margin-top: auto;
+	z-index: 1;
+	cursor: pointer;
+	right: 20px;
+}
+
+.heart-checkbox {
+	display: none;
+}
+
+
+.heart-checkbox:checked+.heart {
+	color: red;
+}
+
 /* Make adjustments for tablet */
 @media screen and (max-width: 650px) {
 	.shopping-cart {
@@ -389,6 +409,9 @@ label {
 		align-items: center;
 		height: 30px;
 	}
+	.heart{
+		right: 10px;
+	}
 
 }
 
@@ -432,9 +455,10 @@ label {
 }
 
 @media only screen and (min-width:650px) and (max-width:1024px) {
-	.product-quantity{
+	.product-quantity {
 		display: flex;
 	}
+
 	.product-quantity button {
 		width: 10px;
 		text-align: center;
@@ -443,4 +467,9 @@ label {
 		align-items: center;
 		height: 30px;
 	}
+}
+
+.loading{
+	font-size: 26px;
+	text-align: center;
 }
